--- a/src/app/directives/current.html
+++ b/src/app/directives/current.html
@@ -1,4 +1,5 @@
+
 <h2>{{city}}, <span>{{state}}</span></h2>
-<!-- <p class="location">{{currentLocation ? currentLocation : 'Unable to fetch location'}}</p>
- --><h1 class="current-temp">{{currently.temperature ? (currently.temperature | farenheit) : ''}}</h1>
+<h1 class="current-temp">{{currently.temperature ? (currently.temperature | temperature: temp) : ''}}
 <p class="summary">{{currently.summary}}</p>
+<i class="wind wi wi-wind towards-{{currently.windBearing}}-deg"></i>
